--- a/.env
+++ b/.env
@@ -1,19 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=Kalasinga
 APP_ENV=local
-APP_KEY=base64:cRqFfR4JMQ0gpN5YBZkjQ+7PZuMiez5TIGY/NVIWpog=
+APP_KEY=base64:M4xYcOufrqolshFJsQ6rGdz4iOziR+mm/PS0eZE11Q8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=null
 DB_PORT=3306
-
-DB_DATABASE=kodeklinik
-
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=kalasinga
+DB_USERNAME=nerd@amolokaleb
+DB_PASSWORD=RenegadeLion1
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -25,17 +23,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=sendgrid
+SENDGRID_API_KEY=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
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+MAIL_HOST=smtp.sendgrid.net
+MAIL_PORT=587
+MAIL_USERNAME=amolocaleb@gmail.com
+MAIL_PASSWORD=RenegadeLion1
+MAIL_ENCRYPTION=tls
+
+
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -44,3 +41,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
