--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "bogardo/mailgun": "^5.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "s-ichikawa/laravel-sendgrid-driver": "^2.1",
+        "sendgrid/sendgrid": "^7.3",
         "unisharp/laravel-ckeditor": "^4.7"
     },
     "require-dev": {
