working n email functionality

--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=null
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=kalasinga
-DB_USERNAME=nerd@amolokaleb
-DB_PASSWORD=RenegadeLion1
+DB_DATABASE=kodeklinik
+DB_USERNAME=kodeklinik
+DB_PASSWORD=eyePod
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
