--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Kalasinga
+APP_NAME=Kodeklinik
 APP_ENV=local
 APP_KEY=base64:M4xYcOufrqolshFJsQ6rGdz4iOziR+mm/PS0eZE11Q8=
 APP_DEBUG=true
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=kodeklinik
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=kodeklinik
+DB_PASSWORD=eyePod
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
